dangen (0.5-3) UNRELEASED; urgency=medium

  * Fix lintian debian-watch-may-check-gpg-signature tag.
    - debian/watch: Use asc file.
    - debian/upstream: Add upstream public key.
  * Fix lintian ancient-standards-version tag.
    - Bump Standards-Version from 3.9.2 to 3.9.5.
  * New maintainer, thanks Oohara for your work!(Closes: #738876)

 -- Alexander Alemayhu <alexander@bitraf.no>  Mon, 04 Aug 2014 22:57:28 +0200

dangen (0.5-2) unstable; urgency=low

  * debian/rules: set ./configure options with
    dpkg-buildflags --export=configure
  * debian/control: added Build-Depends: dpkg-dev (>= 1.16.1) because
    this package uses dpkg-buildflags

 -- Oohara Yuuma <oohara@debian.org>  Wed, 08 Feb 2012 21:17:09 +0900

dangen (0.5-1) unstable; urgency=low

  * New upstream release
  * the new upstream release fixes the following bug:
    + Add the return value of sdl-config --libs (which usually
      contains a -l flag) to LIBS, not AM_LDFLAGS.  You can now
      use the --as-needed option of binutils-gold ld.  (closes: #638743)
  * debian/source/format: new file, set the source format to 3.0 (quilt)
  * debian/rules: added build-arch and build-indep targets
  * debian/control: set Standards-Version: to 3.9.2
  * debian/control, debian/compat: set debhelper compatibility level to 8
  * debian/control: added Build-Conflicts: autoconf2.13, automake1.4
    just in case
  * debian/control, debian/rules: don't copy config.guess and config.sub
    from autotools-dev because they are unnecessary
  * debian/control, debian/rules: use dh-autoreconf to regenerate
    autoconf/automake files
  * debian/rules: put CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" after
    ./configure, not before it

 -- Oohara Yuuma <oohara@debian.org>  Fri, 27 Jan 2012 00:34:51 +0900

dangen (0.4-1) unstable; urgency=low

  * new upstream release
  * new maintainer (closes: #554249)
  * debian/compat: set debhelper compatibility level to 7