@@ -1,0 +1,10 @@
+[Desktop Entry]
+Version=1.0
+Name=dangen
+Comment=shoot 'em up game
+Exec=dangen
+Icon=dangen
+Terminal=false
+Type=Application
+Categories=Game;ArcadeGame;
+Keywords=shooting;battle;explosions;2D;
