@@ -1,0 +1,2 @@
+usr/share/pixmaps
+usr/share/applications
