@@ -1,0 +1,1 @@
+dangen.xpm usr/share/pixmaps
