@@ -1,0 +1,41 @@
+/* XPM */
+static char * dangen_xpm[] = {
+"32 32 6 1",
+" 	c None",
+".	c #FFF5C0",
+"+	c #437297",
+"@	c #B6C2B0",
+"#	c #0A4B8B",
+"$	c #60869D",
+"................................",
+"................................",
+"................................",
+"................................",
+"................................",
+"................................",
+"................................",
+"++.............................+",
+"..+...........................+.",
+"...+.........................+..",
+"....++.....................++...",
+"......+.........@.........+.....",
+".......++.......@.......++......",
+".........+....#####....+........",
+"..........++.#######.++.........",
+"............###.@.###...........",
+"...........###..@..###..........",
+"...........##.++@++.##..........",
+"...........##..$$$..##..........",
+"...........##$$...$$##..........",
+"...........###.....###..........",
+"........$$$.###...###.$$$.......",
+"......$$.....#######.....$$.....",
+"...$$$........#####........$$$..",
+".$$...........................$$",
+"$...............................",
+"................................",
+"................................",
+"................................",
+"................................",
+"................................",
+"................................"};
